--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>GROW KING SCRIPTS</title>
+  <title>Grow King Scripts</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
   <!-- ======= Home Section ======= -->
   <section id="home">
     <div class="home-container">
-      <h1>GROW KING SCRIPTS</h1>
+      <h1>Grow King Scripts</h1>
       <h2>Make It Overpowered</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
@@ -129,7 +129,15 @@
           <h2>Product</h2>
         </div>
 
-        <ul id="product-flters" class="d-flex justify-content-center">
+		<div class="row">
+		  <div class="col-md-12">
+			<div class="info-box">
+			  <p>The product display on this website is not yet available because this website is under development. Please check our Discord for details of the product.</p>
+			</div>
+		  </div> 
+		 </div>
+		 
+       <!-- <ul id="product-flters" class="d-flex justify-content-center">
           <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-app">App</li>
           <li data-filter=".filter-card">Card</li>
@@ -226,7 +234,7 @@
               <a href="assets/img/product/product-9.jpg" data-gallery="productGallery" class="product-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="product-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -261,7 +269,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>GROW KING SCRIPTS</h3>
+      <h3>Grow King Scripts</h3>
       <p>Make It Overpowered</p>
       <div class="social-links">
         <a href="https://discord.gg/yPYZpsqqBM" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
