--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
 				  <div class="count-box">
 					<i class="bi bi-check-circle-fill" style="color: #00ffb3;"> Verified License</i>
-					<br><p>The number of verified license buyers is <span data-purecounter-start="0" data-purecounter-end="Nil" data-purecounter-duration="0.5" class="purecounter"></span></p>
+					<br><p>The number of verified license buyers is <span data-purecounter-start="0" data-purecounter-end="35" data-purecounter-duration="0.5" class="purecounter"></span></p>
 				  </div>
 				</div>
 
@@ -109,7 +109,7 @@
                 <div class="col-md-6 mt-5 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-check-circle" style="color: #ff0000;"> Premium Buyer</i>
-                    <br><p>The number of premium buyers is <span data-purecounter-start="0" data-purecounter-end="Nil" data-purecounter-duration="0.5" class="purecounter"></span></p>
+                    <br><p>The number of premium buyers is <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="0.5" class="purecounter"></span>+</p>
 				  </div>
                 </div>
               </div>
