--- a/footer.html
+++ b/footer.html
@@ -1,36 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-</head>
-<body>
-
-    <!-- Tempat header akan dimuat -->
-    <div id="header"></div>
-
-    <main>
-        <h1>Welcome to My Websiteeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h1>
-        <p>This is the content of the homepage.</p>
-    </main>
-
-    <!-- Tempat footer akan dimuat -->
-    <div id="footer"></div>
-
-    <script>
-        // Fungsi untuk memuat file HTML eksternal
-        function loadHTML(elementId, fileName) {
-            fetch(fileName)
-                .then(response => response.text())
-                .then(data => document.getElementById(elementId).innerHTML = data)
-                .catch(err => console.error('Error loading file:', err));
-        }
-
-        // Memuat header dan footer
-        loadHTML("header", "header.html");
-        loadHTML("footer", "footer.html");
-    </script>
-
-</body>
-</html>
+<footer>
+    <p>&copy; 2024 My Website. All Rights Reserved.</p>
+</footer>
