--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex justify-content-center align-items-center ">
 
+	<nav id="navbar" class="navbar">
+      <ul>
+        <li><a class="nav-link scrollto active" href="#">Information</a></li>
+        <li><a class="nav-link scrollto" href="resellers.html">Resellers</a></li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
+	
   </header><!-- End Header -->
 
   <main id="main">
