--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<nav id="navbar" class="navbar">
       <ul>
-        <li><a class="nav-link scrollto active" href="#">Information</a></li>
+        <li><a class="nav-link scrollto active" href="#main">Information</a></li>
         <li><a class="nav-link scrollto" href="resellers.html">Resellers</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
