--- a/index.html
+++ b/index.html
@@ -1,104 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirect Page</title>
+    <script>
+        function redirectToLink() {
+            const targetUrl = "https://www.growkingscripts.com";
+            window.location.href = targetUrl;
+        }
 
-  <title>Grow King Scripts</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/img/icon.jpg" rel="icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+        window.onload = redirectToLink;
+    </script>
 </head>
-
 <body>
-
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex justify-content-center align-items-center ">
-
-	<nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link scrollto active" href="#main">Information</a></li>
-        <li><a class="nav-link scrollto" href="resellers.html">Resellers</a></li>
-      </ul>
-      <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav><!-- .navbar -->
-	
-  </header><!-- End Header -->
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section class="breadcrumbs">
-		<div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Information</h2>
-          <ol>
-            <li><a href="#">Home</a></li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End Breadcrumbs -->
-
-    <section class="inner-page-information">
-	  <ul> 
-		<li> We are happy to announce that Grow King Scripts script sales will reopen from November 30, 2024. Thank you for your enthusiasm and support. </li>
-		<li> ... </li> 
-		<li> Kami dengan senang hati mengumumkan bahwa penjualan skrip Grow King Scripts akan dibuka kembali mulai 30 November 2024. Terima kasih atas antusiasme dan dukungan Anda. </li>
-       </ul>
-      </div>
-    </section>
-
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <h3>Grow King Scripts</h3>
-      <p>Make It Overpowered</p>
-      <div class="social-links">
-        <a href="https://discord.gg/yPYZpsqqBM" target="_blank" class="discord"><i class="bi bi-discord"></i></a>
-        <a href="https://www.youtube.com/@GrowKSofficial" target="_blank" class="youtube"><i class="bi bi-youtube"></i></a>
-        <a href="https://www.tiktok.com/@growksofficial" target="_blank" class="tiktok"><i class="bi bi-tiktok"></i></a>
-        <a href="https://linktr.ee/growks" target="_blank" class="linktree"><i class="bi bi-tree-fill"></i></a>
-      </div>
-      <div class="copyright">
-        &copy; Copyright <strong><span>Grow King Scripts</span></strong>.
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/script.js"></script>
-  <script src="assets/js/main.js"></script>
+    <p>The website has been moved to a new address, <a href="https://www.growkingscripts.com">growkingscripts.com</a>.</p>
 </body>
-
 </html>
